mysite/cooklog/static/css/cooklog.css
h2 a {
    color: #874C62;
}

body {
    padding-left: 0px;
    background-color: #FFFFFF; /*FFFEEE;*/
    color: #874C62;
    font-family: 'Merriweather', serif;
    padding-bottom: 0px;
}

footer {
    background-color: #A7D2CB;
    padding-bottom: 0px;
    font-family: 'Merriweather', serif;
    padding: 10px 5px 10px 10px;
}

h5 {
    color: #874C62; /*#F2D388;*/
    font-size: 18px;
}

a:link {
    color: #C98474;
    font-family: 'Merriweather', serif;
}

a:visited {
    color: #C98474;
    font-family:  'Merriweather', serif;
}

.page-header {
    background-color: #A7D2CB;
    margin-top: 0;
    padding: 10px 10px 10px 10px;
    height: 60px;
}

.page-header-title a {
    font-size: 28px;
    color: #874C62;
    padding-left: 30px;
    font-family:  'Merriweather', serif;
    float: left;
    width: 180px;
}

.page-header-menu {
    font-size: 14px;
    color: #C98474;
    float: right;
}
.page-header-menu a {
    color: #874C62;
}

.page-footer {
    font-size: 14px;
    color: #C98474;
}

.page-menu {
    margin-left: 560px;
    display: block;
    list-style: none;
}

/*
.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
    color: #C98474;
    font-size: 10pt;
    text-decoration: none;
    font-family:  'Merriweather', serif;
}
 */

.page-title {
    padding-left: 20px;
    padding-top: 10px;
    padding-bottom: 5px;
    font-family: 'Merriweather', serif;
    color: #874C62;
    font-size: 20px;
}

.page-subtitle {
    font-size: 16px;
    color: #008080;
    padding-top: 30px;
    padding-left: 30px;
    padding-bottom: 20px;
    font-family:  'Merriweather', serif;
}



.dish-mini {
    padding-left: 40px;
    min-height: 110px;
}

.dish-mini-date {
    float: left;
    font-size: 12px;
    color: #C98474;
    width: 50px;
}

.dish-mini-date-long {
    float: left;
    font-size: 12px;
    color: #C98474;
    width: 100px;
    padding-top: 5px;
}

.dish-mini-days-until {
    float: left;
    font-size: 12px;
    color: #C98474;
    width: 80px;
}

.dish-mini-chef {
    float: left;
    padding: 0 30px;
    width: 140px;
}

.dish-mini-chef a {
    font-size: 16px;
    color: #874C62;
}

.dish-mini-inner {
    font-size: 13px;
    padding: 0 30px;
    width: 350px;
    margin: 0px 0;
    float: left;
}

.dish-mini-inner-name {
    float: top;
    padding-top: 0px;
    font-size: 16px;
}

.dish-mini-inner-name a {
    color: #874C62;
}

.dish-mini-inner-rating {
    float: top;
    padding-top: 5px;
}
.dish-mini-inner-recipe {
    float: top;
    padding-top: 5px;
    padding-bottom: 5px;
    font-size: 12px;
    color: #C98474
}
.dish-mini-inner-recipe a {
    color: #C98474;
}
.dish-mini-inner-method {
    float: top;
    padding-top: 10px;
    font-size: 12px;
    color: #C98474
}

.dish-mini-image {
    font-size: 13px;
    padding: 0 0px;
    margin: 0px 0;
    float: left;
    width: 120px;
}
.dish-mini-edit {
    font-size: 12px;
}

.dish-brief {
    padding-left: 40px;
    min-height: 30px;
}

.dish-brief-inner {
    font-size: 13px;
    padding: 0 2px;
    width: 800px;
    margin: 0px 0;
    float: left;
}

.dish-brief-inner-edit {
    font-size: 12px;
    float: left;
    padding-top: 5px;
    width: 50px;
}

.dish-brief-inner-name {
    float: left;
    padding-top: 0px;
    font-size: 16px;
    width: 450px;
}

.dish-brief-inner-name a {
    color: #874C62;
}

.dish-brief-inner-rating {
    float: left;
    padding-top: 5px;
    width: 100px;
}
.dish-brief-inner-recipe {
    float: left;
    padding-top: 5px;
    padding-bottom: 0px;
    font-size: 12px;
    width: 100px;
    color: #C98474
}
.dish-brief-inner-recipe a {
    color: #C98474;
}



.crop img {
    height: 90px;
    width: 120px;
    object-fit: cover;
    border: 4px solid #F2D388;
}

.crop-placeholder img {
    height: 90px;
    width: 120px;
    object-fit: cover;
    border: 4px solid #F2D388;
    filter: grayscale(100%);
}

.page-text {
    font-size: 14px;
    padding-left: 40px;
    padding-bottom: 0px;
    color: #000000;
    padding-top: 10px;
}

.dish-full {
    padding-left: 40px;
    padding-bottom: 40px;
}

.dish-full-stars {
    padding-top: 10px;
    padding-bottom: 10px;
}

.dish-full-method {
    width: 600px;
}

.dish-full-chef-comments {
    width: 600px;
}

.dish-full-subtitle {
    font-size: 16px;
    color: #008080;
    padding-top: 30px;
    margin-left: -10px;
    padding-bottom: 20px;
    font-family:  'Merriweather', serif;
}

.dish-full-days-until {
    padding-top: 20px;
    padding-bottom: 20px;
}
.dish-full-query-status {
    padding-bottom: 20px;
}

.dish-empty {
    padding-left: 40px;
    padding-bottom: 20px;
}

.dish-entry-form {
    padding-left: 40px;
    padding-bottom: 40px;
}


.content {
    margin-left: 40px;
}

h1, h2 {
    padding-left: 10px;
    font-family:  'Merriweather', serif;
    color: #874C62;
}

h3 {
    font-family: 'Merriweather', serif;
    color: #874C62;
}

h4 {
    font-family:  'Merriweather', serif;
    color: #008080;
}


.date {
    color: #A7D2CB;
}

.save {
    float: right;
}

.post-form textarea, .post-form input {
    width: 100%;
}

.top-menu, .top-menu:hover, .top-menu:visited {
    color: #1B1209;
    float: right;
    font-size: 10pt;
    margin-right: 15px;
}

.dish {
    margin-bottom: 4px;
    color: #874C62;
}

.dish h1 a, .dish h1 a:visited {
    color: #C98474;
}

